# tensorflow

tensorflow/lite/: CMakeLists.txt  interpreter_test.cc  model.cc  model_test.cc  mutable_op_resolver_test.cc  tflite_osal.cc  tflite_osal.h
tensorflow/lite/delegates/nnapi/: nnapi_delegate.cc
tensorflow/lite/kernels/internal/optimized/: eigen_tensor_reduced_instantiations_oss.h  neon_tensor_utils.cc
